update default font

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name : damgargroup.com.au
 brand : Damgar Group
-description : A static website built by Nathan Birrell for Damgar Group Australia.
+description : Damgar Property Group is at the forefront of small to medium residential and commercial property development in inner Melbourne.
 keyword : property developer, builder, construction
 url : http://damgargroup.com.au
 email : admin@damgargroup.com.au
