--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "Basic template for a new Foundation for Sites project.",
   "main": "gulpfile.js",
   "devDependencies": {
-    "gulp": "^3.9.0",
+    "browser-sync": "^2.14.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.1.0",
-    "gulp-sass": "^2.1.0"
+    "gulp-sass": "^2.1.0",
+    "gulp-shell": "^0.5.2",
+    "lodash": "^4.14.1"
   },
   "scripts": {
     "start": "gulp",
