--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name : damgargroup.com.au
 brand : Damgar Property Group
 description : Damgar Property Group is at the forefront of small to medium residential and commercial property development in inner Melbourne.
 keyword : property developer, builder, construction
-url : http://damgargroup.com.au
+url : http://nathanbirrell.me/damgargroup.com.au/
 email : admin@damgargroup.com.au
 phone : 03 9596 8543 
 author : Nathan Birrell
