--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ name : damgargroup.com.au
 brand : Damgar Property Group
 description : Damgar Property Group is at the forefront of small to medium residential and commercial property development in inner Melbourne.
 keyword : property developer, builder, construction
-# url : http://nathanbirrell.me/damgargroup.com.au/
-url : http://localhost:3000
+url : http://nathanbirrell.me/damgargroup.com.au/
+# url : http://localhost:3000
 email : admin@damgargroup.com.au
 phone : 03 9596 8543 
 author : Nathan Birrell
