--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name : damgargroup.com.au
+name : Damgar Property Group
 brand : Damgar Property Group
 description : Damgar Property Group is at the forefront of small to medium residential and commercial property development in inner Melbourne.
 keyword : property developer, builder, construction
