--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ description : Damgar Property Group is at the forefront of small to medium resid
 keyword : property developer, builder, construction
 # url : http://nathanbirrell.me/damgargroup.com.au/
 url : http://localhost:3000
+url : http://10.0.1.3:3000
 # url : http://damgargroup.dev
 email : admin@damgargroup.com.au
 phone : 03 9596 8543 
