--- a/_config.yml
+++ b/_config.yml
@@ -23,3 +23,9 @@ permalink: pretty
 #       path: "" # empty string = all files
 #     values:
 #       layout: "default"
+#   -
+#     scope:
+#       path: "" # empty string = all files
+#       type: "posts"
+#     values:
+#       permalink: /projects/:title/
