--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name : Damgar Property Group
 brand : Damgar Property Group
 description : Damgar Property Group is at the forefront of small to medium residential and commercial property development in inner Melbourne.
 keyword : property developer, builder, construction
-url : http://nathanbirrell.me/damgargroup.com.au/
+url : http://damgar.nathanbirrell.me/
 # url : http://localhost:3000
 # url : http://10.0.1.3:3000
 # url : http://damgargroup.dev
