--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url : http://localhost:3000
 email : admin@damgargroup.com.au
 phone : 03 9596 8543 
 author : Nathan Birrell
-latest_development_url : "#"
+latest_development_url : '#contact'
 analytics : UA-81747047-1
 year : 2016
 markdown : kramdown
