--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ name: Damgar Property Group
 brand: Damgar Property Group
 description: Damgar Property Group is at the forefront of small to medium residential and commercial property development in inner Melbourne.
 keyword: property developer, builder, construction
-# url: http://nathanbirrell.me/damgargroup.com.au/
-url: http://localhost:3000
+url: http://nathanbirrell.me/damgargroup.com.au/
+# url: http://localhost:3000
 # url: http://10.0.1.3:3000
 # url: http://damgargroup.dev
 email: admin@damgargroup.com.au
