--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "gulp-shell": "^0.5.2",
     "gulp-uglify": "^2.0.0",
-    "lodash": "^4.14.1"
+    "lodash": "^4.14.1",
+    "path": "^0.12.7"
   },
   "scripts": {
     "start": "gulp",
