--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,13 @@ name: Damgar Property Group
 brand: Damgar Property Group
 description: Damgar Property Group is at the forefront of small to medium residential and commercial property development in inner Melbourne.
 keyword: property developer, builder, construction
+
 email: admin@damgargroup.com.au
 phone: 03 9596 8543 
+address: 79 Asling St, Brighton VIC 3186
+
 author: Nathan Birrell
-latest_project_url: 'http://google.com.au'
+
 analytics: UA-81747047-1
 year: 2016
 markdown: kramdown
@@ -29,3 +32,5 @@ gallery:
   thumbnail_size:
     x: 900                  # max width of thumbnails (in pixels)
     y: 512                  # max height of thumbnails (in pixels)
+
+latest_project_url: 'http://google.com.au'
