--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ gems:
 - jekyll-gallery-generator
 - jekyll-redirect-from
 
-url: https://damgar.nathanbirrell.me
+url: http://damgargroup.com.au
 # baseurl: "/"
 # url: http://localhost:3000
 
