--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ keyword: property developer, builder, construction
 email: admin@damgargroup.com.au
 phone: 03 9596 8543 
 # Keep address to one line if you want to use maps (for URL ecaping)
-address: 79 Asling St, Brighton VIC 3186
+address: 79B Asling St, Brighton VIC 3186
 
 author: Nathan Birrell
 
