Add CTA back into the mix:

--- a/_config.yml
+++ b/_config.yml
@@ -35,4 +35,4 @@ gallery:
     x: 1080                 # max width of thumbnails (in pixels)
     y: 600                  # max height of thumbnails (in pixels)
 
-latest_project_url: 'http://google.com.au'
+latest_project_url: 'http://www.cascara.com.au/'
