--- a/_config.yml
+++ b/_config.yml
@@ -36,4 +36,4 @@ gallery:
     x: 1080                 # max width of thumbnails (in pixels)
     y: 600                  # max height of thumbnails (in pixels)
 
-latest_project_url: 'http://www.dendyresidences.com.au/'
+latest_project_url: 'https://www.biancobrighton.com.au/'
